[tool.poetry]
name = "agentex"
version = "0.1.0"
description = ""
authors = ["Felix Su <felixs8696@gmail.com>"]
readme = "README.md"
packages = [{ include = "agentex" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
litellm = "^1.48.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
