[tool.poetry]
name = "agentex"
version = "0.1.0"
description = ""
authors = ["Felix Su <felixs8696@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = "^2.9.2"
pyyaml = "^6.0.2"
python-dotenv = "^1.0.1"
questionary = "^2.0.1"
rich = "^13.8.1"
typer = "^0.12.5"

[tool.poetry.scripts]
agentex = "agentex.cli.main:app"  # This points to the main function in agentex.cli.main

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
